# Prometheus-Grafana-Loki-API-Service

./: .env  README.md  dev-requirements.txt  injector.py  main.py  pyproject.toml  service-log.sh  service-start.sh
config/: log_config.py
controller/: es_log_controller.py
repository/: schema.py
service/: es_log_handler.py
